# Dhivehi-Tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
dhivehi_spell/: __init__.py  __main__.py  checker.py  dictionary.py  suggest.py  thaana.py  web.py
dhivehi_spell/data/: corpus.tsv  radheef.tsv  wordlist.tsv
dhivehi_spell/web_static/: index.html
dhivehi_tools/: __init__.py  __main__.py  grammar.py  morphology.py  paraphrase.py  transform.py  translit.py  web.py
dhivehi_tools/data/: definitions.tsv  thesaurus.tsv
dhivehi_tools/web_static/: dhivehi.js  index.html  manifest.json  sw.js
docs/: cover.html
scripts/: build_corpus.py  build_definitions.py  build_lexicon.py  build_news_corpus.py  build_thesaurus.py  evaluate.py  export_hunspell.py  export_web.py  merge_corpora.py
tests/: test_convert.py  test_grammar.py  test_morphology.py  test_paraphrase.py  test_spell.py  test_tools_web.py  test_web.py
